--- a/package.json
+++ b/package.json
@@ -5,16 +5,26 @@
   "main": "./main.js",
   "scripts": {
     "start": "electron .",
+    "dist": "build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "electron": "^22.2.0",
+    "electron-packager": "^17.1.1",
     "tailwindcss": "^3.2.4"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
-    "bootstrap": "^5.3.0-alpha1"
+    "bootstrap": "^5.3.0-alpha1",
+    "electron-builder": "^23.6.0"
+  },
+  "build": {
+    "appId": "com.ipenywis.app",
+    "target": "nsis",
+    "directory": {
+      "output": "build"
+    }
   }
 }
