--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "electron": "^22.2.0",
-    "electron-packager": "^17.1.1",
-    "tailwindcss": "^3.2.4"
+    "electron-packager": "^17.1.1"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
