--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "electron": "^22.2.0",
-    "electron-packager": "^17.1.1"
+    "electron": "^22.2.0"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
