--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 { 
   "name": "diplom",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "",
   "main": "./main.js",
   "scripts": {
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
-    "electron-builder": "^23.6.0"
+    "electron-packager":"^17.1.1"
   },
   "build": {
     "appId": "com.ipenywis.app",
